# cells

./: 404.html  README.md  __init__.py  auto_dock.py  auto_dock~.py  cell s.desktop  cells.desktop  demo.py  index.html  iniparse.py  mkdocs.yml  requirements.txt  search.html  sitemap.xml  speed.sh  stylerc  test.py
align/: index.html
application/: index.html
box/: index.html
button/: index.html
cells/: __init__.py  align.py  application.py  basewidget.py  box.py  button.py  checkbutton.py  checkgroup.py  component.py  cursor.py  event.py  flag.py  frame.py  icon.py  image.py  label.py  mainframe.py  moveframe.py  orientation.py  radiobutton.py  radiobutton_bkp.py  radiogroup.py  signal.py  svgicon.py  svgwidget.py  switchbutton.py  switchgroup.py  test.py  toolbutton.py  widget.py  widgetbase.py
cells/add/blurplugin/: CMakeLists.txt  blur-client-protocol.h  blur.xml  blurplugin.cpp  blurplugin.h  dep.txt  teste_blur.py
cells/add/blurplugin/Nova pasta/: CMakeLists.txt copia  blurplugin copia.cpp
checkbutton/: index.html
checkgroup/: index.html
cursor/: index.html
docs/: align.md  application.md  auto_dock.py  box.md  button.md  checkbutton.md  checkgroup.md  cursor.md  event.md  flag.md  frame.md  icon.md  image.md  index.md  label.md  mainframe.md  moveframe.md  orientation.md  radiobutton.md  radiogroup.md  signal.md  svgwidget.md  switchbutton.md  switchgroup.md  toolbutton.md  widget.md  widgetbase.md
event/: index.html
flag/: index.html
frame/: index.html
icon/: index.html
image/: index.html
label/: index.html
mainframe/: index.html
(+49 files in other folders)
